# aoc-rust-template

./: Cargo.toml  cargo-generate.toml
src/: errors.rs  lib.rs  main.rs  part_1.rs  part_2.rs
