[package]
name = "aoc-aoc_{{ project-name  | kebab_case }}"
version = "0.1.0"
edition = "2024"
# We set publish to false by default to prevent publishing solutions
publish = false

[lib]
name = "aoc_{{ project-name  | snake_case}}"
path = "src/lib.rs"

[[bin]]
name = "aoc_{{ project-name  | snake_case}}_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
