[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2024"
# We set publish to false by default to prevent publishing solutions
publish = false

[lib]
name = "{{ crate_name }}"
path = "src/lib.rs"

[[bin]]
name = "{{ crate_name }}_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
